--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <link rel="stylesheet" href="simple.min.css">
-    <link rel="stylesheet" href="cv.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
