Use https and www for links, instead of letting them default to this domain

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <span class="smallest-font">UK phone: 1800207375881989</span>
     </div>
     <div class="flex-space-between">
-        <a href="github.com/akazukin5151" class="smallest-font">
+        <a href="https://www.github.com/akazukin5151" class="smallest-font">
             github.com/akazukin5151
         </a>
         <a
-            href="linkedin.com/in/yik-ching-tsui-519207242/"
+            href="https://www.linkedin.com/in/yik-ching-tsui-519207242/"
             class="smallest-font"
         >
             linkedin.com/in/yik-ching-tsui-519207242/
