feat: improve wording

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
         <p>Rust, Python</p>
     </div>
     <ul>
-        <li>Data visualization skills: cumulative accessibility of rail transport, and categorizing population by accessibility type to illustrate the urban form of cities</li>
-        <li>Original analysis was on a random sample as the dataset was too large to fit in memory. I tackled the problem again by using a more efficient data structure and streaming algorithm, calculating the entire
+        <li>Data visualization: cumulative accessibility of rail transport, categorizing population by accessibility type to illustrate the urban form of cities</li>
+        <li>Resilience and tenacity: Original analysis was on a random sample as the dataset was too large to fit in memory. I tackled the problem again by using a more efficient data structure and streaming algorithm, calculating the entire
  dataset in seconds.</li>
     </ul>
 
@@ -120,7 +120,7 @@
         <p>Python</p>
     </div>
     <ul>
-        <li>Data visualization skills: Train schedule diagrams for Japanese railways, using pandas and matplotlib</li>
+        <li>Temporal data visualization: Train schedule diagrams for Japanese railways, using pandas and matplotlib</li>
         <li>Used by a PhD research on intercity and interregional train travel in Japan</li>
     </ul>
 
@@ -133,8 +133,7 @@
         <p>Rust</p>
     </div>
     <ul>
-        <li>Data modelling and statistical probability skills: Models the spatial distribution of passengers inside a train along its journey,
- using plotters</li>
+        <li>Data modelling and statistical probability: Models the spatial distribution of passengers inside a train along its journey, using plotters</li>
     </ul>
 
     <div class="flex-space-between">
@@ -158,7 +157,7 @@
         <p>Python</p>
     </div>
     <ul>
-        <li>Browse an online art community in the terminal with images</li>
+        <li>Terminal browser with images for an online art community</li>
     </ul>
 
     <div class="flex-space-between">
@@ -170,7 +169,7 @@
         <p>Haskell</p>
     </div>
     <ul>
-        <li>Functional programming skills: Interactive password manager for the terminal</li>
+        <li>Interactive password manager for the terminal, written in a purely functional language</li>
     </ul>
 
     <div class="flex-space-between">
@@ -182,7 +181,7 @@
         <p>Python</p>
     </div>
     <ul>
-        <li>Programming skills: Multilingual Japan-style train announcement animations, through a programmatic Python and JSON interface</li>
+        <li>Multilingual Japan-style train announcement animations, through a programmatic Python and JSON interface</li>
     </ul>
 
 </body>
