feat: move IGCSE to separate section with correct date

--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
         <ul>
             <li>Extended Essay topic on Economics: <em>Has Hong Kong's levy on plastic shopping bags reduced the negative externalities of its consumption?</em> (B)</li>
         </ul>
+    </ul>
+
+    <div class="flex-space-between">
+        <div class="flex-space-between">
+        </div>
+        <p>August 2017 — June 2019</p>
+    </div>
+    <ul>
         <li>10 IGCSE subjects, including Mathematics (A*), Physics (A*), ICT (A*), First Language English (A)</li>
     </ul>
 
