feat: improve description of papers

--- a/index.html
+++ b/index.html
@@ -43,19 +43,23 @@
         <li>Undergraduate Thesis: <em>Evaluating the algorithms used in site suitability analysis: an open source implementation for photovoltaic solar farms in Arizona</em> (achieved 74%, officially published in the Student Handbook)</li>
         <ul>
           <li>Attention to detail: accounted for edge effects due to study area boundary</li>
-          <li>Creativity and innovation: novel visualizations of different analysis methods to evaluate their suitability relative to the data</li>
+          <li>Creativity and innovation: evaluated the impact of different buffers by overlaying contour lines on a map.</li>
+          <li>I evaluated the impact of standardization functions by overlaying the standardization functions on a histogram of the actual dataset.</li>
+          <li>Attention to detail: accounted for edge effects due to study area boundary</li>
           <li>Critical thinking: evaluated shortcomings of previous studies and my thesis</li>
         </ul>
         <li>Directed Readings project: <em>Railway network design and transfers in Greater Tokyo and London</em> (achieved 70%)</li>
         <ul>
-          <li>Creativity and innovation: original visualizations of the effectiveness of railway networks in transport coverage</li>
+          <li>I researched origin-destination data myself, and used QGIS to visualize railway coverage and transport accessibility.</li>
         </ul>
         <li>Applications of Spatial Data Science coursework: <em>Comparative public bus transportation network and accessibility analysis: a case study for Greater London and Hong Kong</em> (achieved 82%)</li>
         <ul>
-            <li>Creativity and innovation: unique visualizations of how urban form shapes bus networks
-        </li></ul>
+            <li>Self learning: I went the extra mile and used methods beyond what was taught in the classroom, and applied the latest advances in academia</li>
+            <li>Creativity: I used a novel scatterplot quadrant method to segmentate the cities into high and low bus stop accessibility relative to the local population</li>
+        </ul>
         <li>Principles of Spatial Data Science coursework: <em>What drove the success of the pro-democracy camp in the Hong Kong 2019 District Council Elections?</em> (achieved 82%)</li>
         <ul>
+          <li>Visualizing statistics: used choropleth maps, OLS regressions, and maps of spatial LISA clusters</li>
           <li>Attention to detail: researched camp affiliation of every candidate and explained in detail the causes behind each spatial cluster</li>
         </ul>
         <li>Technologies used: QGIS, Python, R, Matplotlib, Seaborn, Shapely, GeoPandas, Pandas, Numpy, Haskell, Git</li>
