--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
     </div>
     <ul>
         <li>Visualizations of proportional representation methods, with an interactive webapp hosted at <a href="https://akazukin5151.github.io/approportionment/">akazukin5151.github.io/approportionment</a> </li>
+        <li>Fine tuned algorithms and data structures for high performance, including perfect hash functions and bitarrays.</li>
     </ul>
 
     <div class="flex-space-between">
