feat: add intro paragraph

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         </a>
     </div>
 
+    <p id="intro">I am a lifelong, multidisciplinary learner that loves a new challenge - with the resilience and tenacity to push myself towards excellence. I take pride in challenging new problems, producing innovative, accurate, and high-quality work that expands my horizons.</p>
+
     <h2>Education</h2>
 
     <div class="flex-space-between">
@@ -39,14 +41,13 @@
 
     <ul>
         <li>First class degree, Bachelors of Arts (Hons) in Geography (Spatial Data Science Pathway)</li>
-        <li>Visual communication: all coursework below used maps, charts, and statistics for analysis, for critically evaluation and communicating implications</li>
+        <li>Visual communication: all coursework below used maps, charts, and statistics to communicate analysis and evaluation.</li>
         <li>Undergraduate Thesis: <em>Evaluating the algorithms used in site suitability analysis: an open source implementation for photovoltaic solar farms in Arizona</em> (achieved 74%, officially published in the Student Handbook)</li>
         <ul>
           <li>Attention to detail: accounted for edge effects due to study area boundary</li>
           <li>Creativity and innovation: evaluated the impact of different buffers by overlaying contour lines on a map.</li>
           <li>I evaluated the impact of standardization functions by overlaying the standardization functions on a histogram of the actual dataset.</li>
           <li>Attention to detail: accounted for edge effects due to study area boundary</li>
-          <li>Critical thinking: evaluated shortcomings of previous studies and my thesis</li>
         </ul>
         <li>Directed Readings project: <em>Railway network design and transfers in Greater Tokyo and London</em> (achieved 70%)</li>
         <ul>
@@ -183,18 +184,6 @@
     </div>
     <ul>
         <li>Interactive password manager for the terminal, written in a purely functional language</li>
-    </ul>
-
-    <div class="flex-space-between">
-        <h3>
-            <a href="https://github.com/akazukin5151/metroani">
-                metroani
-            </a>
-        </h3>
-        <p>Python</p>
-    </div>
-    <ul>
-        <li>Multilingual Japan-style train announcement animations, through a programmatic Python and JSON interface</li>
     </ul>
 
 </body>
