feat: improve wording

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <ul>
-        <li>First class degree, Bachelors of Arts (Hons) in Geography (Spatial Data Science Pathway)</li>
+        <li>First Class Honours, Bachelors of Arts (Hons) in Geography (Spatial Data Science Pathway)</li>
         <li>Visual communication: all coursework below used maps, charts, and statistics to communicate analysis and evaluation.</li>
         <li>Undergraduate Thesis: <em>Evaluating the algorithms used in site suitability analysis: an open source implementation for photovoltaic solar farms in Arizona</em> (achieved 74%, officially published in the Student Handbook)</li>
         <ul>
