feat: improve wording

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </a>
     </div>
 
-    <p id="intro">I am a lifelong, multidisciplinary learner that loves a new challenge - with the resilience and tenacity to push myself towards excellence. I take pride in producing innovative, accurate, and high-quality work that expands my horizons.</p>
+    <p id="intro">As a lifelong, multidisciplinary learner, I love a new challenge, and I take pride in overcoming those challenges with my resilience and tenacity, producing innovative and accurate work that creates real impact.</p>
 
     <h2>Education</h2>
 
