--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
+    <title>Yik Ching Tsui's CV</title>
     <link rel="stylesheet" href="simple.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
