add hk phone and replace github link with website

--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
         <a href="mailto:tsuiyikching@proton.me" class="smallest-font">
             tsuiyikching@proton.me
         </a>
-        <span class="smallest-font">UK phone: 1800207375881989</span>
+        <div id="phones">
+          <span class="smallest-font">UK phone: 1800207375881989</span>
+          <span class="smallest-font">HK phone: 6923 8602</span>
+        </div>
     </div>
     <div class="flex-space-between">
-        <a href="https://www.github.com/akazukin5151" class="smallest-font">
-            github.com/akazukin5151
+        <span>Website: <a href="https://akazukin5151.github.io" class="smallest-font">
+            akazukin5151.github.io
         </a>
+        </span>
         <a
             href="https://www.linkedin.com/in/yik-ching-tsui-519207242/"
             class="smallest-font"
