--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </a>
     </div>
 
-    <p id="intro">As a lifelong, multidisciplinary learner, I love a new challenge, and I take pride in overcoming those challenges with my resilience and tenacity, producing innovative and accurate work that creates real impact.</p>
+    <p id="intro">As a lifelong, multidisciplinary learner, I love a new challenge, and I take pride in overcoming those challenges with resilience and tenacity, producing innovative and accurate work that creates real impact.</p>
 
     <h2>Education</h2>
 
