--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <p id="intro">
-      As a lifelong, multidisciplinary learner, I love a new challenge, and having fun overcoming those challenges with resilience and tenacity. I take pride in producing innovative and accurate work that creates real impact.
+      I love having fun applying my programming and analytical skills, and I take pride in my innovative and accurate work. As a lifelong learner, I see challenges as opportunities to grow.
     </p>
 
     <h2>Education</h2>
