update employment section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,29 @@
       I love having fun applying my programming and analytical skills, and I take pride in my innovative and accurate work. As a lifelong learner, I see challenges as opportunities to grow.
     </p>
 
+    <h2 class="print-m-t-10">Employment</h2>
+
+    <h3 class="m-10">GIS Analyst</h3>
+    <div class="flex-space-between">
+        <p>Arup Hong Kong</p>
+        <p>May 2023 — present</p>
+    </div>
+
+
+    <h3 class="m-10">Frontend web and software developer</h3>
+    <div class="flex-space-between">
+        <p>C &amp; K Instruments (HK) Limited, remote</p>
+        <p>May 2022 — September 2022</p>
+    </div>
+
+    <ul>
+        <li>Rewrote legacy website with statically typed languages to increase maintainability (it was unmaintainable for years)</li>
+        <li>Sped up site performance by 37% (total load time), 36.7% (time to interactive), 40% (onload time), 56% (DOM interactive time)</li>
+        <li>Increased flexibility of codebase suitable for non-technical staff, enabling them to finish a year-long backlog of tasks</li>
+        <li>Teamwork: Worked in a team of two and collaborated with the administrative, sales, and calibration departments to design the maintenance system.</li>
+        <li>Technologies used: Haskell, Rust, Typescript, Python, Makefile, Git, GitHub Actions</li>
+    </ul>
+
     <h2>Education</h2>
 
     <div class="flex-space-between">
@@ -107,22 +130,6 @@
     </ul>
 
     <div class="pagebreak"></div>
-
-    <h2 class="print-m-t-10">Employment</h2>
-
-    <h3 class="m-10">Frontend web and software developer</h3>
-    <div class="flex-space-between">
-        <p>C &amp; K Instruments (HK) Limited, remote</p>
-        <p>May 2022 — September 2022</p>
-    </div>
-
-    <ul>
-        <li>Rewrote legacy website with statically typed languages to increase maintainability (it was unmaintainable for years)</li>
-        <li>Sped up site performance by 37% (total load time), 36.7% (time to interactive), 40% (onload time), 56% (DOM interactive time)</li>
-        <li>Increased flexibility of codebase suitable for non-technical staff, enabling them to finish a year-long backlog of tasks</li>
-        <li>Teamwork: Worked in a team of two and collaborated with the administrative, sales, and calibration departments to design the maintenance system.</li>
-        <li>Technologies used: Haskell, Rust, Typescript, Python, Makefile, Git, GitHub Actions</li>
-    </ul>
 
     <h2 class="print-m-t-10">Personal projects</h2>
 
