add languages currently using

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         <p>May 2023 — present</p>
     </div>
 
+    <ul>
+      <li>Technologies used: Rust, Typescript, React, Python, C#, SQL, Git, ArcGIS Pro, ArcGIS Enterprise, ArcGIS Online, ArcGIS Experience Bulider, ArcGIS Dashboard, QGIS.</li>
+    </ul>
+
 
     <h3 class="m-10">Frontend web and software developer</h3>
     <div class="flex-space-between">
