remove unnecessary `li` tag for nested list items

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             tsuiyikching@proton.me
         </a>
         <div id="phones">
-          <span class="smallest-font">UK phone: 1800207375881989</span>
           <span class="smallest-font">HK phone: 6923 8602</span>
         </div>
     </div>
@@ -33,7 +32,7 @@
     </div>
 
     <p id="intro">
-      I love having fun applying my programming and analytical skills, and I take pride in my innovative and accurate work. As a lifelong learner, I see challenges as opportunities to grow.
+      I love having fun applying my programming and analytical skills, and I take pride in my innovative and creative work. As a lifelong learner, I view challenges as opportunities to grow.
     </p>
 
     <h2 class="print-m-t-10">Employment</h2>
@@ -77,63 +76,21 @@
         <li>First Class Honours, Bachelors of Arts (Hons) in Geography (Spatial Data Science Pathway)</li>
         <li>Visual communication: all coursework below used maps, charts, and statistics to communicate analysis and evaluation.</li>
         <li>Undergraduate Thesis: <em>Evaluating the algorithms used in site suitability analysis: an open source implementation for photovoltaic solar farms in Arizona</em> (achieved 74%, officially published in the Student Handbook)</li>
-        <li>
           <ul>
             <li>Creativity and innovation: evaluated the impact of different buffers by overlaying contour lines on a map.</li>
             <li>I evaluated the impact of standardization functions by overlaying the standardization functions on a histogram of the actual dataset.</li>
             <li>Attention to detail: accounted for edge effects due to study area boundary</li>
           </ul>
-        </li>
         <li>Directed Readings project: <em>Railway network design and transfers in Greater Tokyo and London</em> (achieved 70%)</li>
-        <li>
           <ul>
             <li>I researched origin-destination data myself, and used QGIS to visualize railway coverage and transport accessibility.</li>
           </ul>
-        </li>
         <li>Applications of Spatial Data Science coursework: <em>Comparative public bus transportation network and accessibility analysis: a case study for Greater London and Hong Kong</em> (achieved 82%)</li>
-        <li>
           <ul>
               <li>Self learning: I went the extra mile and used methods beyond what was taught in the classroom, and applied the latest advances in academia</li>
               <li>Creativity: I used a novel scatterplot quadrant method to segmentate the cities into high and low bus stop accessibility relative to the local population</li>
           </ul>
-        </li>
-        <li>Principles of Spatial Data Science coursework: <em>What drove the success of the pro-democracy camp in the Hong Kong 2019 District Council Elections?</em> (achieved 82%)</li>
-        <li>
-          <ul>
-            <li>Visualizing statistics: used choropleth maps, OLS regressions, and maps of spatial LISA clusters</li>
-            <li>Attention to detail: researched camp affiliation of every candidate and explained in detail the causes behind each spatial cluster</li>
-          </ul>
-        </li>
-        <li>Technologies used: QGIS, Python, R, Matplotlib, Seaborn, Shapely, GeoPandas, Pandas, Numpy, Haskell, Git</li>
     </ul>
-
-    <div class="flex-space-between">
-        <div class="flex-space-between">
-            <h3>Yew Chung International School</h3>
-            <p class="m-l-20">Hong Kong</p>
-        </div>
-        <p>August 2017 — June 2019</p>
-    </div>
-
-    <ul>
-        <li>International Baccalaureate Diploma (score: 39/45), including Mathematics SL (7/7), Physics HL (7)</li>
-        <li>
-          <ul>
-              <li>Extended Essay topic on Economics: <em>Has Hong Kong's levy on plastic shopping bags reduced the negative externalities of its consumption?</em> (B)</li>
-          </ul>
-        </li>
-    </ul>
-
-    <div class="flex-space-between">
-        <div class="flex-space-between">
-        </div>
-        <p>August 2017 — June 2019</p>
-    </div>
-    <ul>
-        <li>10 IGCSE subjects, including Mathematics (A*), Physics (A*), ICT (A*), First Language English (A)</li>
-    </ul>
-
-    <div class="pagebreak"></div>
 
     <h2 class="print-m-t-10">Personal projects</h2>
 
