add technologies used

--- a/index.html
+++ b/index.html
@@ -44,7 +44,20 @@
     </div>
 
     <ul>
-      <li>Technologies used: Rust, Typescript, React, Python, C#, SQL, Git, ArcGIS Pro, ArcGIS Enterprise, ArcGIS Online, ArcGIS Experience Bulider, ArcGIS Dashboard, QGIS.</li>
+      <li>Git</li>
+      <li>Rust</li>
+      <li>Python</li>
+      <li>HTML, CSS, Typescript</li>
+      <li>React</li>
+      <li>Java</li>
+      <li>C#</li>
+      <li>SQL</li>
+      <li>ArcGIS Pro</li>
+      <li>ArcGIS Enterprise</li>
+      <li>ArcGIS Online</li>
+      <li>ArcGIS Experience Builder</li>
+      <li>ArcGIS Dashboard</li>
+      <li>QGIS</li>
     </ul>
 
 
