update job title

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
     <h2 class="print-m-t-10">Employment</h2>
 
-    <h3 class="m-10">GIS Programmer</h3>
+    <h3 class="m-10">GIS Analyst and Software Developer</h3>
     <div class="flex-space-between">
-        <p>Arup Hong Kong</p>
+        <p>Arup</p>
         <p>May 2023 — present</p>
     </div>
 
